atualização no site completo

--- a/lojas.html
+++ b/lojas.html
@@ -31,7 +31,7 @@
                 <h2 class="banner__loja__titulo">Nossas Lojas</h2>
             </section>
 
-            <section class="container__loja">
+            <section class="container__loja aliceblue">
                 <div class="conteudo__loja">
                     <h2 class="titulo__loja">Loja Sopping do Real - Rudge Ramos / SBC</h2>
                     <address class="endereco"> Largo São João Batista, 4990 - Rudge Ramos, São Bernardo do Campo - SP, 09560-000</address>
@@ -58,7 +58,7 @@
             </section>
 
             
-            <section class="container__loja">
+            <section class="container__loja aliceblue">
                 <div class="conteudo__loja">
                     <h2 class="titulo__loja">Loja Mathues Presentes - Vila São Pedro / SBC</h2>
                     <address class="endereco"> Avenida Dom Pedro de Alcântara 278, Montanhão, São Bernardo do Campo - SP, 09784-000</address>
@@ -85,7 +85,7 @@
                 </div>
             </section>
             
-            <section class="container__loja">
+            <section class="container__loja aliceblue">
                 <div class="conteudo__loja">
                     <h2 class="titulo__loja">Loja Shopping do Real - Ribeirão Pires / SP</h2>
                     <address class="endereco"> R. do Comércio, 120 - Centro, Ribeirão Pires, São Paulo - SP, 09400-200</address>
@@ -111,7 +111,7 @@
                 </div>
             </section>
 
-            <section class="container__loja">
+            <section class="container__loja aliceblue">
                 <div class="conteudo__loja">
                     <h2 class="titulo__loja">Loja Shopping do Real - São Jorge / SP</h2>
                     <address class="endereco"> Av. Eduardo Pereira Ramos, 493 - Jardim Orly, São Paulo - SP</address>
@@ -137,7 +137,7 @@
                 </div>
             </section>
 
-            <section class="container__loja">
+            <section class="container__loja aliceblue">
                 <div class="conteudo__loja">
                     <h2 class="titulo__loja">Loja Shopping do Real - Boa Esperança São Mateus / SP</h2>
                     <address class="endereco"> R. Antônio Assunção Ferreira, 194 - Parque Boa Esperança, São Paulo - SP, 08341-360</address>
