atualização na seção categoria

--- a/index.html
+++ b/index.html
@@ -35,44 +35,46 @@
             </section>
 
             <section class="categoria">
-                <div class="lista__categoria">
-                    <div class="item__categoria">
-                        <a id="item1" href="#alimentos"><img src="./assets/imagem/categoria/1.png" alt="Categoria de Alimentos">Alimentos</a>
+                    <img class="seta__esquerda" src="./assets/imagem/arrow_left.svg" alt="seta esquerda">
+                    <img class="seta__direita" src="./assets/imagem/arrow_right.svg" alt="seta direita">
+                    <div class="lista__categoria">
+                        <div class="item__categoria">
+                            <a id="item1" href="#alimentos"><img src="./assets/imagem/categoria/1.png" alt="Categoria de Alimentos">Alimentos</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a  href="#bebidas"><img src="./assets/imagem/categoria/2.png" alt="Categoria de Bebidas">Bebidas</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#congelados"><img src="./assets/imagem/categoria/3.png" alt="Categoria de Congelados">Congelados</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#descartaveis"><img src="./assets/imagem/categoria/4.png" alt="Categoria de Descartaveis">Descartaveis</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#frios"><img src="./assets/imagem/categoria/5.png" alt="Categoria de Frios">Frios</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#panos"><img src="./assets/imagem/categoria/6.png" alt="Categoria de Panos">Panos</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#papelaria"><img src="./assets/imagem/categoria/7.png" alt="Categoria de Papelaria">Papelaria</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#perfumaria"><img src="./assets/imagem/categoria/8.png" alt="Categoria de Perfumaria">Perfumaria</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#plasticos"><img src="./assets/imagem/categoria/9.png" alt="Categoria de Plasticos">Plasticos</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#limpeza"><img src="./assets/imagem/categoria/10.png" alt="Categoria de Limpeza">Limpeza</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#utensilios"><img src="./assets/imagem/categoria/11.png" alt="Categoria de Utensílios">Utensílios</a>
+                        </div>
+                        <div class="item__categoria">
+                            <a href="#vidros"><img src="./assets/imagem/categoria/12.png" alt="Categoria de Vidros">Vidros</a>
+                        </div>
                     </div>
-                    <div class="item__categoria">
-                        <a  href="#bebidas"><img src="./assets/imagem/categoria/2.png" alt="Categoria de Bebidas">Bebidas</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#congelados"><img src="./assets/imagem/categoria/3.png" alt="Categoria de Congelados">Congelados</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#descartaveis"><img src="./assets/imagem/categoria/4.png" alt="Categoria de Descartaveis">Descartaveis</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#frios"><img src="./assets/imagem/categoria/5.png" alt="Categoria de Frios">Frios</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#panos"><img src="./assets/imagem/categoria/6.png" alt="Categoria de Panos">Panos</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#papelaria"><img src="./assets/imagem/categoria/7.png" alt="Categoria de Papelaria">Papelaria</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#perfumaria"><img src="./assets/imagem/categoria/8.png" alt="Categoria de Perfumaria">Perfumaria</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#plasticos"><img src="./assets/imagem/categoria/9.png" alt="Categoria de Plasticos">Plasticos</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#limpeza"><img src="./assets/imagem/categoria/10.png" alt="Categoria de Limpeza">Limpeza</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#utensilios"><img src="./assets/imagem/categoria/11.png" alt="Categoria de Utensílios">Utensílios</a>
-                    </div>
-                    <div class="item__categoria">
-                        <a href="#vidros"><img src="./assets/imagem/categoria/12.png" alt="Categoria de Vidros">Vidros</a>
-                    </div>
-                </div>
             </section>
             <section class="chamada">
                 <h1>Variedades e preço baixo</h1>
