add o contato ao rodape

--- a/index.html
+++ b/index.html
@@ -349,8 +349,21 @@
             <div class="rodape__conteudo">
                 <div class="rodape__left">
                    <address>
-                    <h4>Contatos</h4>
-                    <p></p>
+                    <h4 class="contato__titulo">Contatos</h4>
+                    <ul class="lista__de__contato">
+                        <li class="contato">
+                            <img src="./assets/icon/phone-call.png" alt="Telefone">        
+                            <a href="#">1199999-9999</a>
+                        </li>
+                        <li class="contato">
+                            <img src="./assets/icon/whatsapp.png" alt="Whatsapp">   
+                            <a href="#">1199999-9999</a>
+                        </li>
+                        <li class="contato">
+                            <img src="./assets/icon/email.png" alt="Email">
+                            <a href="#">contato@matheuspresentes.com.br</a>
+                        </li>
+                    </ul>
                    </address>
                 </div>
                 <div class="rodape__right">
