--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="index.html">Início</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="lojas.html">Lojas</a></li>
-                    <li><a href="#contato">Contato</a></li>
+                    <li id="contatofechaMenu"><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
         </header>
