atualização do rodapé

--- a/index.html
+++ b/index.html
@@ -352,24 +352,19 @@
                     <h4 class="contato__titulo">Contatos</h4>
                     <ul class="lista__de__contato">
                         <li class="contato">
-                            <img src="./assets/icon/phone-call.png" alt="Telefone">        
+                            <img class="icone__contados" src="./assets/icon/phone-call.png" alt="Telefone">        
                             <a href="#">1199999-9999</a>
                         </li>
                         <li class="contato">
-                            <img src="./assets/icon/whatsapp.png" alt="Whatsapp">   
+                            <img class="icone__contados" src="./assets/icon/whatsapp.png" alt="Whatsapp">   
                             <a href="#">1199999-9999</a>
                         </li>
                         <li class="contato">
-                            <img src="./assets/icon/email.png" alt="Email">
+                            <img class="icone__contados" src="./assets/icon/email.png" alt="Email">
                             <a href="#">contato@matheuspresentes.com.br</a>
                         </li>
                     </ul>
                    </address>
-                </div>
-                <div class="rodape__right">
-                    <h3 class="rodape__titulo">Formas de Pagamentos:</h3>
-                    <p class="rodape__descricao">Aceitamos credito & debito</p>
-                    <img class="rodape__imagem__bandeiras" src="./assets/imagem/banners/bandeiras-de-cartao.png" alt="Badeiras de Cartão">
                 </div>
             </div>
             <p class="copyright">&copy; Matheus Presentes - Todos os direitos reservados.</p>
