--- a/lojas.html
+++ b/lojas.html
@@ -167,12 +167,23 @@
         <footer class="rodape" id="contato">
             <div class="rodape__conteudo">
                 <div class="rodape__left">
-                   <img class="rodape__imagem__logo" src="./assets/imagem/logo.png" alt="logo Matheus Presntes"> 
-                </div>
-                <div class="rodape__right">
-                    <h3 class="rodape__titulo">Formas de Pagamentos:</h3>
-                    <p class="rodape__descricao">Aceitamos credito & debito</p>
-                    <img class="rodape__imagem__bandeiras" src="./assets/imagem/banners/bandeiras-de-cartao.png" alt="Badeiras de Cartão">
+                   <address>
+                    <h4 class="contato__titulo">Contatos</h4>
+                    <ul class="lista__de__contato">
+                        <li class="contato">
+                            <img class="icone__contados" src="./assets/icon/phone-call.png" alt="Telefone">        
+                            <a href="#">1199999-9999</a>
+                        </li>
+                        <li class="contato">
+                            <img class="icone__contados" src="./assets/icon/whatsapp.png" alt="Whatsapp">   
+                            <a href="#">1199999-9999</a>
+                        </li>
+                        <li class="contato">
+                            <img class="icone__contados" src="./assets/icon/email.png" alt="Email">
+                            <a href="#">contato@matheuspresentes.com.br</a>
+                        </li>
+                    </ul>
+                   </address>
                 </div>
             </div>
             <p class="copyright">&copy; Matheus Presentes - Todos os direitos reservados.</p>
